--- a/javascript intermedio/1. Introducción.md
+++ b/javascript intermedio/1. Introducción.md
@@ -1,11 +1,17 @@
+
+<p align="center">
+  <img width="180" height="180" src="https://drive.google.com/file/d/1lGP85CbSLx6g8IHVBV4o5zdEefceBsiy/view?usp=sharing">
+</p>
+
 # **Chapter 1** – Javascript, Érase una vez javascript
 
-Java y javascript, dadas las similitudes de sus nombres es común suponer que existe una estrecha relación entre ellos más allá del hecho de que ambos son lenguajes de programación, sin embargo no es así. Javascript nace para ser utilizado en  netscape navigator como una propuesta para crear programas para la web en 1995, año en el cual java se encontraba en franco crecimiento y aceptación, por lo que la coincidencia en sus nombres se le atribuye a una estrategia de marketing por parte de javascript.
+Java y JavaScript, dadas las similitudes de sus nombres, es común suponer que existe una estrecha relación entre ellos más allá del hecho de que ambos son lenguajes de programación, sin embargo no es así. JavaScript nace para ser utilizado en netscape navigator como una propuesta para crear programas para la web en 1995, año en el cual Java se encontraba en franco crecimiento y aceptación por lo que la coincidencia en sus nombres no se le atribuye a la casualialidad si no a una estrategia de marketing por parte de JavaScript.
 
-Aunque inicialmente fue concebido para la web, en la actualidad nos podemos servir de javascript para desarrollar aplicaciones de escritorio, móviles, server-side incluso para hacer realidad virtual y machine learning. Todo esto Mediante una variedad de herramientas bien posicionadas y populares en la comunidad de desarrolladores como Angular, React, Vue, Electron, React 360, react native, nodejs, etc.
+Aunque inicialmente fue concebido para la web, en la actualidad nos podemos servir de JavaScript para desarrollar aplicaciones de escritorio, móviles, server-side incluso para hacer realidad virtual y machine learning. Todo esto mediante una variedad de herramientas bien posicionadas y populares en la comunidad de desarrolladores como Angular, React, Vue, Electron, React 360, react native, nodejs, etc.
 
-Javascript es conocido como un lenguaje interpretado, multiparadigma, fácil de aprender, con algunas características interesantes (como **herencia basada en prototipos**, **closures**, **first-class functions**,**single threaded**, etc.) que goza de mucha popularidad, de manera que si haces desarrollo de software eventualmente te toparas en menor o mayor medida con javascript.
+---
+JavaScript o simplemente JS es conocido como un lenguaje interpretado, multiparadigma, fácil de aprender, con algunas características interesantes (como **herencia basada en prototipos**, **closures**, **first-class functions**,**single threaded**, etc.) que goza de mucha popularidad, de manera que si haces desarrollo de software eventualmente te toparas en menor o mayor medida con JS.
 
-Podemos decir que **javascript está en todas partes**, esta características de omnipresencia combinado con su sencillez lo hace una excelente opción y probablemente la mejor para iniciar en el mundo de la programación. Este material no busca ser un sustitutito de los libros especializados en el tema, en su lugar pretende ofrecer un primer acercamiento a algunos de los conceptos más importantes que nos permitan dar respuesta oportuna a situaciones comunes en el mundo JS. La típica lectura express que nos podemos permitir en los 5 minutos de break.
+Podemos decir que **JavaScript está en todas partes**, esta características de omnipresencia combinado con su sencillez lo hace una excelente opción y probablemente la mejor para iniciar en el mundo de la programación. Este material no busca ser un sustitutito de los libros especializados en el tema, en su lugar pretende ofrecer un primer acercamiento a algunos de los conceptos más importantes que nos permitan dar respuesta oportuna a situaciones comunes en el mundo JS. La típica lectura express que nos podemos permitir en los 5 minutos de break.
 
 > “Si el loco persistiera en su locura, se volvería sabio” Williams Blake
