update url image

--- a/javascript intermedio/1. Introducción.md
+++ b/javascript intermedio/1. Introducción.md
@@ -1,6 +1,6 @@
 
 <p align="center">
-  <img width="180" height="180" src="https://drive.google.com/file/d/1lGP85CbSLx6g8IHVBV4o5zdEefceBsiy/view?usp=sharing">
+  <img width="180" height="180" src="https://cdn.pixabay.com/photo/2013/07/12/12/02/hatter-145132__340.png"/>
 </p>
 
 # **Chapter 1** – Javascript, Érase una vez javascript
