--- a/javascript intermedio/2. Objetos.md
+++ b/javascript intermedio/2. Objetos.md
@@ -2,10 +2,10 @@
   <img width="180" height="180" src="https://cdn.pixabay.com/photo/2016/03/31/23/31/alice-1297676_960_720.png"/>
 </p>
 
-<h1><b>Chapter 2</b>– Objetos, un buen punto de partida</h1>
+<h1 align="center"><b>Chapter 2</b>– Objetos, un buen punto de partida</h1>
 
 <p align="justify">
-  En la web es común encontrar la expresión "todo en JavaScript es un objeto" esto aunque no es cierto funciona muy bien como recurso pedagógico. Ver todo en JavaScript como un objeto simplifica el aprendizaje y ciertamente casi todos los elementos en JS se comportan como un objeto.
+  En la web es común encontrar la expresión "todo en JavaScript es un objeto" esto aunque no es cierto funciona muy bien como recurso pedagógico. Ver todo en JavaScript como un objeto simplifica el aprendizaje y ciertamente casi todos los elementos en JS se comportan como tal.
 </p>
 
 <p align="justify">
