--- a/javascript intermedio/1. Introducción.md
+++ b/javascript intermedio/1. Introducción.md
@@ -6,7 +6,7 @@
 <h1 align="center"> <b>Chapter 1</b> – Javascript, Érase una vez javascript </h1>
 
 <p align="justify">
-  Java y JavaScript, dadas las similitudes de sus nombres, es común suponer que existe una estrecha relación entre ellas más allá del hecho de que ambos son lenguajes de programación, sin embargo no es así. JavaScript nace para ser utilizado en netscape navigator como una propuesta para crear programas para la web en 1995, año en el cual Java se encontraba en franco crecimiento y aceptación por lo que la coincidencia en sus nombres no se le atribuye a la casualialidad sino a una estrategia de marketing por parte de JavaScript.
+  Java y JavaScript, dadas las similitudes de sus nombres, es común suponer que existe una estrecha relación entre ellas más allá del hecho de que ambos son lenguajes de programación, sin embargo no es así. JavaScript nace para ser utilizado en Netscape Navigator como una propuesta para crear programas para la web en 1995, año en el cual Java se encontraba en franco crecimiento y aceptación por lo que la coincidencia en sus nombres no se le atribuye a la casualialidad sino a una estrategia de marketing por parte de JavaScript.
 </p>
 
 <p align="justify">
