--- a/javascript intermedio/2. Objetos.md
+++ b/javascript intermedio/2. Objetos.md
@@ -11,15 +11,14 @@
 <p align="justify">
   Por otra parte no queda duda que los objetos son una parte fundamental para mejorar nuestros skills como desarrolladores JS y por ende un buen punto de partida.
 </p>
- 
- <h2>Abordemos el tema desde el principio</h2>
+
+<h2>Abordemos el tema desde el principio</h2>
 
 >Un objeto es un conjunto de propiedades definidas como **key:value** el dinamismo de javascript permite que el "value" sea un tipo de dato primitivo, una función u otro objecto. Mientras que el "key" o propiedad puede ser un string o cual elemento convertible a string.
 
 ```js
  //una propiedad puede ser definida con comillas o sin ellas logrando el mismo resultado
 {
-  
   "name":"Pedro"
   lastName: "Perez"
 }
@@ -65,36 +64,38 @@ Object.defineProperties(character, {
   specie: {
     value: "human",
   },
-  vehicles: ["Snowspeeder", "Imperial Speeder Bike"],
+  vehicles: {
+    value: ["Snowspeeder", "Imperial Speeder Bike"]
+  }
 });
 ```
 
 <p align="justify">
-  Si definimos una propiedad que no es equivalente a un nombre valido de variable entonces no podra ser accedida con el operador punto "." en su lugar podemos usar corchetes "[]"
+  Si definimos una propiedad que no es equivalente a un nombre valido de variable entonces no podra ser accedida con el operador punto "." en su lugar podemos usar corchetes "[]".
 </p>
 
 ```js
 const obj = {
-  "0": "javascript"
+  "0_prop": "javascript"
 }
 
-obj.0 //uncaught sintaxError: Unexpecte number
-obj["0"] //javascript
+obj.0_prop //Uncaught SyntaxError: Numeric separators are not allowed at the end of numeric literals
+obj["0_prop"] //javascript
 ```
 
-la creación de propiedades a través de los métodos estáticos **[Object.defineProperty](https://developer.mozilla.org/es/docs/Web/JavaScript/Referencia/Objetos_globales/Object/defineProperty)** y **[Object.defineProperties](https://developer.mozilla.org/es/docs/Web/JavaScript/Referencia/Objetos_globales/Object/defineProperties)** tienen como principal características diferenciadora la posibilidad de
+La creación de propiedades a través de los métodos estáticos **[Object.defineProperty](https://developer.mozilla.org/es/docs/Web/JavaScript/Referencia/Objetos_globales/Object/defineProperty)** y **[Object.defineProperties](https://developer.mozilla.org/es/docs/Web/JavaScript/Referencia/Objetos_globales/Object/defineProperties)** tienen como principal características diferenciadora la posibilidad de
 Configurar tres propiedades que tienen **false** como valor por defecto:
 
-- **writable** : Posibilidad de actualizar el value a traves del operador asignación.
+- **writable** : Posibilidad de actualizar el value a través del operador asignación.
 
-- **configurable**: posibilidad de eliminar la propiedad a traves del operador delete.
+- **configurable**: posibilidad de eliminar la propiedad a través del operador delete.
 
 - **enumerable**: posibilidad de visualizar la propiedad durante su enumeracion.
 
 <p align="justify">
 Al colocar estas propiedades en <b>true</b> obtendremos el mismo comportamiento que se logra al asignar propiedades por los otros métodos mencionados.
 
-Finalmente las propiedades creadas pueden ser eliminadas (siempre que no se haya configurado <b>configurable:false</b>) a través del operador <b>delete</b>
+Finalmente las propiedades creadas pueden ser eliminadas (siempre que no se haya configurado <b>configurable:false</b>) a través del operador <b>delete</b>.
 </p>
 
 ```js
