--- a/javascript intermedio/3. funciones.md
+++ b/javascript intermedio/3. funciones.md
@@ -1,60 +1,73 @@
-## **chapter 3** - Funciones, un objeto que se puede ejecutar  
+<p align="center">
+  <img width="180" height="180" src="https://cdn.pixabay.com/photo/2012/04/15/21/33/alice-35382_960_720.png"/>
+</p>
 
-Anteriormente se dijo que en javascript casi todo se comporta como un objeto.
-Las funciones son un ejemplo interesante de esta afirmación y es que las funciones al igual que los objetos podemos declararlos vía literal, vía constructor e incluso asignarle propiedades.
+<h1><b>Chapter 3</b>- Funciones, un objeto que se puede ejecutar</h1>
+
+<p align="justify">
+  Anteriormente se dijo que en javaScript casi todo se comporta como un objeto, las funciones son un ejemplo interesante de esta afirmación y es que las funciones al igual que los objetos podemos declararlos vía literal, vía constructor e incluso asignarle propiedades.
+</p>
 
 ```js
-
-  //via literal
+  //vía  literal
   function fn(){}
 
-  //via constructor
+  //vía  constructor
   const fnA = new Function(name, return "hola "+name);
 
-  //asignar propiedades
-  fnA.prop = "Una propiedad para una funcion" 
+  //Asignar propiedades
+  fnA.prop = "Una propiedad para una funcion"
 
   console.log(fnA["prop"])
 
 ```
 
-Esto nos da pie para decir que las funciones son conocidas como **first-class function**. 
-Característica que hace referencia a que las funciones no solo pueden ser asignadas a variables también pueden ser retornadas y enviadas como argumentos de otras funciones ( cosa que también tiene en común con los objetos).
+<p align="justify">
+  Esto nos da pie para decir que las funciones son conocidas como <b>first-class function</b>. Característica que hace referencia a que las funciones no solo pueden ser asignadas a variables también pueden ser retornadas y enviadas como argumentos a otras funciones.
+</p>
 
 ```js
   //first-class function
 
-  const fn = function(){
+  const fn1 = function(cb){
   //...
   }
 
-  const recibirFn = function(a){
+  const fn2 = function(){
     //...
   }
 
-  //recibe una función como argumento
-  recibirFn(fn); 
+  //Recibe una función como argumento
+  fn1(fn2);
 
-  //retorna una funcion 
+  //retorna una funcion
   function retornaFn(){
     return function(){
-      console.log(true)
+      console.log(true) //True
     }
   }
 
 ```
 
 Tal como lo sugiere el título, en términos simples una función es:
-> un objeto que puede ser ejecutado, más aun, las funciones son unidades modulares de ejecución consideradas como first-class function.
 
-Tener este concepto claro es muy beneficioso al momento de utilizar frameworks o librerías como react.
+> Un objeto que puede ser ejecutado, más aun, las funciones son unidades modulares de ejecución consideradas como first-class function.
+
+<p align="justify">Tener este concepto claro es muy beneficioso al momento de utilizar frameworks o librerías como React.
 Dicho esto podemos hacer énfasis en las formas en que habitualmente definimos y usamos las funciones.
+</p>
 
 ```js
-//definicion de funciones
+//Declaración de funciones por ¨definición¨
 
 function fn(parametro,parametro2){
   //...
+}
+
+//Declaración de funciones por expresión
+
+const fn = function(){
+  /**/
 }
 
 //función anónima como argumento de otra función
@@ -66,24 +79,29 @@ fn(function(){/**/})
   //...
 })()
 ```
-De forma intuitiva podemos notar que la ventaja entre funciones anónimas a la declaración de funciones es que las funciones anónimas son mas compactas, practicas para ser enviadas como argumento a otras funciones. Mientras que la declaración de funciones nos ofrece una variable o nombre para referenciar la función y ejecutarla en el momento que se requiera.
+
+<p align="justify">
+  De forma intuitiva podemos notar que la ventaja entre funciones anónimas a la declaración de funciones tradicionales es que las funciones anónimas son mas compactas, practicas para ser enviadas como argumento a otras funciones y por defecto no ofrece una variable o nombre por la cual pueda ser referenciada en otro momento.
+</p>
+
 ___
-En una categoría especial tenemos a las **arrow function**, de uso muy extendido en la actualidad. Fueron introducidas por ES6 con la intención de simplificar la sintaxis de las funciones, su características más importante es que no posee su propio objeto **this**, sino que hereda el contexto de la función que la contiene.
+<p align="justify">
+En una categoría especial tenemos a las <b>arrow function</b>, de uso muy extendido en la actualidad. Fueron introducidas por ES6 con la intención de simplificar la sintaxis de las funciones, su características más importante es que no posee su propio objeto <b>this</b>, sino que hereda el contexto de la función que la contiene. (¿this? ¿contexto?... hablaremos de esto más tarde)
+</p>
 
 ```js
-
 //Arrow Function
 
-//es opcional los parentesis si tiene solo un parametro
+//Son opcionales los parentesis si tiene solo un parametro
 
-const fn = param1 => 2*param1 //retorna el valor de la expresion de la derecha sin necesidad de usar return
+const fn = param1 => 2*param1 //Retorna el valor de la expresion de la derecha sin necesidad de usar return
 
 fn(2) //4
 
-//para mas de un parámetro son obligatorios los parentesis
+//Para mas de un parámetro son obligatorios los parentesis
 const fn = (param1,param2) => param1 + param2
 
-// usando llaves como en las funciones tradicionales podemos crear nuestro bloque de codigo y retornar usando return
+// Usando llaves como en las funciones tradicionales podemos crear nuestro bloque de codigo y retornar usando return
 
 const fn = r => {
   const PI = Math.PI;
@@ -93,17 +111,16 @@ const fn = r => {
 //Para retornar un objeto podrias encontrarte con algo como esto
 
 const fn = () =>({
-  clave1:"valor1",
-  clave2:"valor2"
-
+  prop1:"valor1",
+  prop2:"valor2"
 })
 
 fn() // { clave1: 'valor1', clave2: 'valor2' }
 
-//para retornar una funcion podrias encontrarte con algo como
+//Para retornar una función podrias encontrarte con algo como
 
 const fn = () => () =>console.log("Hello word")
 
 ```
 
->“La imaginación es más importante que el conocimiento” Albert Einstein 
+>"La imaginación es más importante que el conocimiento" Albert Einstein
