--- a/javascript intermedio/3. funciones.md
+++ b/javascript intermedio/3. funciones.md
@@ -2,7 +2,7 @@
   <img width="180" height="180" src="https://cdn.pixabay.com/photo/2012/04/15/21/33/alice-35382_960_720.png"/>
 </p>
 
-<h1><b>Chapter 3</b>- Funciones, un objeto que se puede ejecutar</h1>
+<h1 align="center"><b>Chapter 3</b>- Funciones, un objeto que se puede ejecutar</h1>
 
 <p align="justify">
   Anteriormente se dijo que en javaScript casi todo se comporta como un objeto, las funciones son un ejemplo interesante de esta afirmación y es que las funciones al igual que los objetos podemos declararlos vía literal, vía constructor e incluso asignarle propiedades.
